Fixed scrollbar issues & multiple issues

--- a/app/scss/_about.scss
+++ b/app/scss/_about.scss
@@ -5,6 +5,7 @@
 .contentbg {
   display: flex;
   flex-wrap: wrap;
+  max-width: 90rem;
 }
 
 .space {
@@ -153,4 +154,3 @@
     }
   }
 }
-
